--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hexlet/code",
+  "name": "readline-sync",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/ggarnet42/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/ggarnet42/frontend-project-44/actions)",
   "main": "index.js",
@@ -11,5 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
