modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "readline-sync",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/ggarnet42/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/ggarnet42/frontend-project-44/actions)",
   "main": "index.js",
